# stellar-privacy-analytics

./: Cargo.toml  PR_DESCRIPTION_UPSTREAM_FIXES.md  package.json
.github/workflows/: ci.yml
backend/: package-lock.json  package.json  tsconfig.json
backend/backups/keys/: registry.json
backend/src/: index.ts
backend/src/gateway/: PrivacyApiGateway.ts
backend/src/integration/: integrateQueueMonitoring.ts
backend/src/monitoring/: mod.rs
backend/src/repositories/: metadataRepository.ts
backend/src/routes/: analytics.ts  audit.ts  data.ts  hsm.ts  privacy-noise.ts  privacy.ts
backend/src/services/: databasePerformance.ts  legalRequirementsService.ts  mockPaymentService.ts  sandboxService.ts  trainingService.ts
backend/src/services/mpc/: tls-tunnel.ts
backend/src/workers/: anonymizationWorker.ts
contracts/: Cargo.toml  package-lock.json  package.json
contracts/src/: access_control.rs  access_control_tests.rs  admin.rs  invariant_testing.rs  onchain_aggregator.rs  privacy_oracle.rs  stellar_analytics.rs  ttl_storage.rs  upgradeable_proxy_tests.rs
docs/: package-lock.json
docs/src/components/home/: FeaturedTopics.tsx  (+1 more)
frontend/: package-lock.json  vite.config.ts
frontend/src/components/: PerformanceCharts.tsx
frontend/src/hooks/: useAnimation.tsx
frontend/src/pages/: DataManagement.tsx
frontend/src/utils/: schemaGenerator.ts
service-discovery-dashboard/: package-lock.json  package.json
shared/: package-lock.json  package.json
shared/src/encryption/: blob-storage.ts  index.ts
src/: data_sovereignty.rs  laplace_noise.rs  lib.rs
(+4 files in other folders)
