[package]
name = "stellar-analytics"
version = "1.0.0"
edition = "2021"
description = "Privacy-preserving analytics smart contracts on Stellar blockchain"
authors = ["Stellar Team <team@stellar-ecosystem.com>"]
license = "MIT"
repository = "https://github.com/your-org/stellar"
homepage = "https://stellar-ecosystem.com"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"
soroban-sdk-macros = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-overflow]
inherits = "release"
overflow-checks = true
